animations and bug fixes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bitter: 400, 700" rel="stylesheet">
-    <link href="style/reset.css">
+    <link href="style/reset.css" rel="stylesheet">
     <link rel="stylesheet" href="style/skeleton.css">
     <link rel="stylesheet" href="style/main.css">
     <title>Federica Alfano</title>
@@ -15,18 +15,45 @@
 <div class="scrollTarget">
     <header>
         <div class="introduction scrollSection">
+            <div class="introductionTitle">
+                <h2 class="authorName">Federica Alfano</h2>
+                <h3 class="profession">Frontend Developer</h3>
+            </div>
             <div class="backgroundImage">
-                <img src="img/BG-image.png">
+                <div class="bgIcon first"><img src="img/spiral_up.svg" alt="Spiral"></div>
+                <div class="bgIcon second"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon third"><img src="img/spiral_down.svg" alt="Spiral"></div>
+                <div class="bgIcon fourth"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon fifth"><img src="img/spiral_up.svg" alt="Spiral"></div>
+                <div class="bgIcon sixth"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon seventh"><img src="img/spiral_up.svg" alt="Spiral"></div>
+                <div class="bgIcon eighth"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon ninth"><img src="img/spiral_down.svg" alt="Spiral"></div>
+                <div class="bgIcon tenth"><img src="img/spiral_down.svg" alt="Spiral"></div>
+                <div class="bgIcon eleventh"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon twelfth"><img src="img/spiral_down.svg" alt="Spiral"></div>
+                <div class="bgIcon thirteenth"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon fourteenth"><img src="img/spiral_up.svg" alt="Spiral"></div>
+                <div class="bgIcon fifteenth"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon sixteenth"><img src="img/spiral_up.svg" alt="Spiral"></div>
+                <div class="bgIcon seventeenth"><img src="img/spiral_down.svg" alt="Spiral"></div>
+                <div class="bgIcon eighteenth"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon nineteenth"><img src="img/star.svg" alt="Star"></div>
+                <div class="bgIcon twentyth"><img src="img/spiral_up.svg" alt="Spiral"></div>
+                <div class="bgIcon twenty-first"><img src="img/spiral_down.svg" alt="Spiral"></div>
+                <div class="bgIcon twenty-second"><img src="img/star.svg" alt="Star"></div>
+
+
             </div>
 
             <div class="scrollAction">
                 <img class="scrollImage" src="img/scroll_img.png">
-                <div class="scroll"><a href="#workflow"> scroll</a></div>
+                <div class="scroll"><a href="#"> scroll</a></div>
             </div>
         </div>
     </header>
 
-    <section id="workflow scrollSection">
+    <section class="workflow scrollSection">
         <div class="sectionTitle">
             <img class="sectionImage" src="img/spiral_icon.png" alt="spiral">
             <h3>Workflow Philosophy</h3>
@@ -75,37 +102,30 @@
         </div>
     </section>
 
-    <section class="projects">
+    <section class="projects scrollSection">
         <div class="sectionTitleProjects">
-            <img class="sectionImage" src="img/icon_star.png" alt="starl">
+            <img class="sectionImage" src="img/icon_star.png" alt="star">
             <h3>Projects</h3>
         </div>
 
         <section class="project-1 scrollSection">
 
-            <div class="container">
-                <div class="row">
-                    <div class="twelve columns">
-                        <div class="rectangle-1"></div>
-                        <div class="imageProject"><img src="img/mockup_fanhub.jpg" alt="mockup"></div>
-                        <h3 class="projectTitle">Fanhub</h3>
-                        <div class="tagsContainer">
-                            <div class="tag">#Team Project</div>
-                            <div class="tag">#Javascript</div>
-                            <div class="tag">#Node.js</div>
-                        </div>
-
-                        <p class="projectParagraph">
-                            A Fan Films’ streaming Website created during an intentive week at HETIC (Web School). I
-                            coded
-                            the
-                            Front-end
-                            features in Javascript and the upload film section in Node.JS.
-                        </p>
-                    </div>
-                </div>
-
+            <div class="rectangle-1"></div>
+            <div class="imageProject"><img src="img/mockup_fanhub.jpg" alt="mockup"></div>
+            <h3 class="projectTitle">Fanhub</h3>
+            <div class="tagsContainer">
+                <div class="tag">#Team Project</div>
+                <div class="tag">#Javascript</div>
+                <div class="tag">#Node.js</div>
             </div>
+
+            <p class="projectParagraph">
+                A Fan Films’ streaming Website created during an intentive week at HETIC (Web School). I
+                coded
+                the
+                Front-end
+                features in Javascript and the upload film section in Node.JS.
+            </p>
 
             <div class="container phases">
                 <div class="row">
@@ -217,28 +237,20 @@
 
         <section class="project3 scrollSection">
 
-            <div class="container">
-                <div class="row">
-                    <div class="twelve columns">
-                        <div class="rectangle-1"></div>
-                        <div class="imageProject"><img src="img/mockup_nespresso.jpg" alt="mockup"></div>
-                        <h3 class="projectTitle3">Redesign Nespresso</h3>
-                        <div class="tagsContainer">
-                            <div class="tag">#Solo Project</div>
-                            <div class="tag">#UX/UI</div>
-                        </div>
-
-                        <p class="projectParagraph">
-                            UX Design project that consists on improving User Experience of Nespresso Website.
-                             Wireframe
-                            was
-                            created on Sketch and protoyped on InVision.
-                        </p>
-                    </div>
+                <div class="rectangle-1"></div>
+                <div class="imageProject"><img src="img/mockup_nespresso.jpg" alt="mockup"></div>
+                <h3 class="projectTitle3">Redesign Nespresso</h3>
+                <div class="tagsContainer">
+                    <div class="tag">#Solo Project</div>
+                    <div class="tag">#UX/UI</div>
                 </div>
 
-            </div>
-
+                <p class="projectParagraph">
+                    UX Design project that consists on improving User Experience of Nespresso Website.
+                     Wireframe
+                    was
+                    created on Sketch and protoyped on InVision.
+                </p>
             <div class="container phases">
                 <div class="row">
                     <div class="three columns">
@@ -324,15 +336,39 @@
                 <div class="logos six columns">
                     <div class="container">
                         <div class="row">
-                            <div class="four columns icon"><a href=""><img src="img/facebook.png" alt="Facebook logo"></a></div>
-                            <div class="four columns icon"><a href=""><img src="img/twitter.png" alt="Twitter logo"></a></div>
-                            <div class="four columns icon"><a href=""><img src="img/instagram.png" alt="Instagram logo"></a></div>
+                            <div class="four columns icon">
+                                <a href="https://www.facebook.com/federica.alfano.18" target="_blank">
+                                    <img class="imageLogo" src="img/facebook.svg" alt="Facebook logo">
+                                </a>
+                            </div>
+                            <div class="four columns icon">
+                                <a href="https://twitter.com/melofedre" target="_blank">
+                                    <img class="imageLogo" src="img/twitter.svg" alt="Twitter logo">
+                                </a>
+                            </div>
+                            <div class="four columns icon">
+                                <a href="https://www.instagram.com/melofedre/" target="_blank">
+                                    <img class="imageLogo" src="img/instagram.svg" alt="Instagram logo">
+                                </a>
+                            </div>
                         </div>
 
                         <div class="row">
-                            <div class="four columns icon"><a href=""><img src="img/resume.png" alt="Resume icon"></a></div>
-                            <div class="four columns icon"><a href=""><img src="img/linkedin.png" alt="Linkedin logo"></a></div>
-                            <div class="four columns icon"><a href=""><img src="img/codepen.png" alt="Codepen logo"></a></div>
+                            <div class="four columns icon">
+                                <a href="img/FedericaAlfano_CV.pdf" target="_blank">
+                                    <img class="imageLogo" src="img/resume.svg" alt="Resume icon">
+                                </a>
+                            </div>
+                            <div class="four columns icon">
+                                <a href="https://fr.linkedin.com/in/federicaalfano" target="_blank">
+                                    <img class="imageLogo" src="img/linkedin.svg" alt="Linkedin logo">
+                                </a>
+                            </div>
+                            <div class="four columns icon">
+                                <a href="https://codepen.io/alfanofederica/" target="_blank">
+                                    <img class="imageLogo" src="img/codepen.svg" alt="Codepen logo">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -352,11 +388,13 @@
             </div>
         </div>
 
+        <footer>
+            <p>©Copyright 2018 Federica Alfano</p>
+        </footer>
+
     </section>
 
-    <footer>
-        <p>©Copyright 2018 Federica Alfano</p>
-    </footer>
+
 </div>
 <script src="main.js"></script>
 </body>
