--- a/index.html
+++ b/index.html
@@ -190,40 +190,38 @@
             <img class="sectionImage" src="img/spiral_icon.png" alt="spiral">
             <h3>Workflow Philosophy</h3>
         </div>
-        <div class="subtitle"><h5>"It's all about hands" <span class="emoji">👋🏻</span></h5></div>
 
         <div class="container workflowSections">
             <div class="row">
-                <div class="three columns">
-                    <h4 class="phaseTitle">Problem Prediction</h4>
-                    <img src="img/pp.jpg" alt="hands and domino">
+                <div class="phase-1 three columns">
+                    <h4 class="phaseTitle"><div class="number">1</div>1 Problem Prediction</h4>
                     <p class="phaseParagraph">The real challenge in webdesign is not solving a problem but finding a
                         strategy
                         for an issue that uses
                         don’t know they have yet. It stands for predicting users’ needs through Data and
                         observation.</p>
                 </div>
-                <div class="three columns">
-                    <h4 class="phaseTitle">Experience Enhancement</h4>
-                    <img src="img/ee.jpg" alt="man using tablet">
+                <div class="path-1 paths"><img src="img/Path.svg"></div>
+                <div class="phase-2 three columns">
+                    <h4 class="phaseTitle"><div class="number">2</div>2 Experience Enhancement</h4>
                     <p class="phaseParagraph">Behind every smart solution there’s research and analysis : in order to
                         improve User Experience,
                         Webdesigners and developers have to build a solid website structure but also look for details
                         that
                         can make the difference.</p>
                 </div>
-                <div class="three columns">
-                    <h4 class="phaseTitle">Strategy Sketch</h4>
-                    <img src="img/ss.jpg" alt="man sketching">
+                <div class="path-2 paths"><img src="img/path_2.svg"></div>
+                <div class="phase-3 three columns">
+                    <h4 class="phaseTitle"><div class="number">3</div>3 Strategy Sketch</h4>
                     <p class="phaseParagraph">Now, after research and Data collection, we have all the tools to find a
                         smart
                         solution for users. It
                         consists on designing a web product that could be represent what average user wants and
                         expects.</p>
                 </div>
-                <div class="three columns">
-                    <h4 class="phaseTitle">Developed Derivation</h4>
-                    <img src="img/dd.jpg" alt="computer on a desk">
+                <div class="path-3 paths"><img src="img/Path.svg"></div>
+                <div class="phase-4 three columns">
+                    <h4 class="phaseTitle"><div class="number">4</div>4 Developed Derivation</h4>
                     <p class="phaseParagraph">The development of a website, derivated from its design, is the last but
                         not
                         the final phase of this
